--- a/data/TCode/User.yaml
+++ b/data/TCode/User.yaml
@@ -147,3 +147,38 @@ USER_CASE16: #手机开卡
         Desc: 手机开卡_参数全部输入
         UserPhoneCard: {"phone":"13718651995","shop_id":"1905736354","grade":0,"is_gift":0}
         Appid: dp3wY4YtycajNEz23zZpb5Jl
+
+
+USER_CASE17: #查询会员等级信息
+    Url: /user/grade
+    Case1:
+        Desc: 查询会员等级信息-电子卡
+        UserGrade: {"cno":"1111587"}
+        Appid: dp0Rm4wNl6A7q6w1QzcZQstr
+
+    Case2:
+        Desc: 查询会员等级信息-实体卡
+        UserGrade: {"cno":"1213058263024675"}
+        Appid: dp3wY4YtycajNEz23zZpb5Jl
+    Case3:
+        Desc: 查询会员等级信息-手机号
+        UserGrade: {"cno":"13718651995"}
+        Appid: dp3wY4YtycajNEz23zZpb5Jl
+    Case4:
+        Desc: 查询会员等级信息-磁道号
+        UserGrade: {"cno":"541213058713320614130587133206"}
+        Appid: dp3wY4YtycajNEz23zZpb5Jl
+
+
+USER_CASE18: #绑定/修改手机号
+    Url: /user/bindphone
+    Case1: #source_type:默认api,点餐类型：4
+        Desc: 绑定/修改手机号-来源api
+        BindPhone: {"cno":"1213058713320614", "phone":"13718651993", "source_type":"api"}
+        Appid: dp3wY4YtycajNEz23zZpb5Jl
+
+    Url: /user/bindphone
+    Case2: #source_type:默认api,点餐类型：4
+        Desc: 绑定/修改手机号-来源点餐
+        BindPhone: {"cno":"1213058713320614", "phone":"13718651994", "source_type":4}
+        Appid: dp3wY4YtycajNEz23zZpb5Jl
