--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,7 +9,7 @@ RETRY: #请求失败重试设置
 EMAIL:
     Smtp_Server: smtp.exmail.qq.com
     Smtp_Sender: lengyaohui.bj@acewill.cn
-    Password: YHleng870120
+    Password: YHleng870120!
     Msg_Title: 预发布-接口自动化测试结果
     Receivers: ['lengyaohui@163.com']  #收件人
     #Receivers: ['lengyaohui@163.com','yechangchun.bj@acewill.cn','wangchaoying.bj@acewill.cn','lilong.bj@acewill.cn','wangyan.bj@acewill.cn','cch@acewill.cn','gzx@acewill.cn','huxl@acewill.cn','jtt@acewill.cn','maming@acewill.cn'] #收件人
